On s'approche de la fin !  :3

--- a/src/uk/ac/gtvl2/resources/fotoshop.css
+++ b/src/uk/ac/gtvl2/resources/fotoshop.css
@@ -34,7 +34,7 @@
     -fx-alignment: center;
 }
 
-#filter-grid {
+#filter-box {
     -fx-spacing: 10;
     -fx-padding: 10;
     -fx-background-color: -fx-mycolor2;
